got inputs to save to redux form and started page 2 of add_stool form

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Video Tagger",
-  "name": "My Video Tagger",
+  "short_name": "Stool Story",
+  "name": "Stool Story",
   "icons": [
     {
       "src": "favicon.ico",
