--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "path-parser": "^4.2.0",
+    "react-svg": "^11.2.1",
     "unescape": "^1.0.1"
   },
   "devDependencies": {
