--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/pnguy55/stoolstory#readme",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
@@ -35,14 +36,21 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "cookie-session": "^1.3.3",
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-sslify": "^1.2.0",
+    "globalize": "^1.6.0",
     "http-proxy-middleware": "^0.20.0",
+    "invariant": "^2.2.4",
     "lodash": "^4.17.15",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "path-parser": "^4.2.0",
+    "prop-types": "^15.7.2",
+    "react-big-calendar": "^0.30.0",
+    "react-content-loader": "^5.1.4",
     "react-svg": "^11.2.1",
     "unescape": "^1.0.1"
   },
